# cdescent

./: .autotools  .cproject  .gitignore  .project  ChangeLog  INSTALL  Makefile.am  README  autogen.sh  configure.ac
example/: Makefile.am  adaelasticnet.c  elasticnet.c  elasticnet_reweight.c  example.c  example.h  example_cdescent.c  main.c  plot_path  run_example.sh  settings.h
include/: Makefile.am  atomic.h  bic.h  cdescent.h  io.h  linreg.h  linreg_private.h  linregmodel.h  mm_mtx.h  mmio.h  mmreal.h  objects.h  pathwise.h  pathwiseopt.h  private.h  regression.h  s_cdescent.h
include/private/: atomic.h  private.h
pkgconfig/: cdescent.pc.in
share/: diabetes_x.data  diabetes_y.data
src/: Makefile.am  atomic.c  bic.c  cas.c  cdescent.c  cyclic.c  io.c  linreg.c  linregmodel.c  mm_mtx.c  mmio.c  mmreal.c  parallel.c  pathwise.c  pathwiseopt.c  private.c  regression.c  stepsize.c  stochastic.c  update.c  utils.c
src/cdescent/: Makefile.am  cdescent.c  utils.c
src/linreg/: Makefile.am
src/private/: atomic.c  private.c
